--- a/theme.yaml
+++ b/theme.yaml
@@ -7,4 +7,5 @@ description:
 logo:
 website: https://github.com/Fastbyte01/KeepIt
 repo: https://github.com/halo-dev/halo-theme-KeepIt
-version: 1.0
+version: 1.0.1
+require: 1.3.0
